--- a/frontend/src/locales/th/translation.json
+++ b/frontend/src/locales/th/translation.json
@@ -1,5 +1,5 @@
 {
-   "success": {
+  "success": {
     "leave": {
       "requestSubmittedAndHrNotified": "ส่งคำขอลาสำเร็จ และแจ้ง HR แล้ว",
       "requestCancelledAndAttachmentRemoved": "ยกเลิกคำขอลาสำเร็จ และลบไฟล์แนบ (ถ้ามี) แล้ว",
@@ -40,8 +40,8 @@
     "start": "เริ่ม",
     "end": "สิ้นสุด",
     "full": "เต็มวัน",
-     "leave": "ลา",
-      "requestStatus": {
+    "leave": "ลา",
+    "requestStatus": {
       "pending": "รออนุมัติ",
       "approved": "อนุมัติแล้ว",
       "rejected": "ถูกปฏิเสธ",
@@ -111,7 +111,7 @@
       "searchEmployeeTypeReason": "ค้นหาพนักงาน / ประเภท / เหตุผล...",
       "searchEmployeeNameOrProposed": "ค้นหาชื่อพนักงานหรือชื่อที่ขอแก้ไข..."
     },
-     "previous": "ก่อนหน้า",
+    "previous": "ก่อนหน้า",
     "next": "ถัดไป",
     "leaveWithType": "ลา ({{type}})",
     "daysShort": {
@@ -221,7 +221,7 @@
         "halfMorning": "ครึ่งวัน (เช้า)",
         "halfAfternoon": "ครึ่งวัน (บ่าย)"
       },
-       "hello": "สวัสดี",
+      "hello": "สวัสดี",
       "hrFallback": "HR",
       "lateThisMonth": "มาสายเดือนนี้:",
       "checkIn": "เช็คอิน",
@@ -303,7 +303,7 @@
       "Attachment preview": "ตัวอย่างไฟล์แนบ",
       "No file": "ไม่มีไฟล์",
       "label": "ไฟล์แนบ",
-       "title": "อนุมัติการลา",
+      "title": "อนุมัติการลา",
       "filters": {
         "allTypes": "ทุกประเภท"
       },
@@ -350,9 +350,8 @@
       }
     },
     "leaveTypeSettings": {
-     "title": "ตั้งค่าประเภทการลา",
+      "title": "ตั้งค่าประเภทการลา",
       "subtitle": "กำหนดโควต้าการลามาตรฐานและนโยบายการยกยอดสำหรับพนักงาน",
-
       "buttons": {
         "processYearEnd": "ประมวลผลปลายปี",
         "processCarryForwardTooltip": "ประมวลผลยกยอดไปปีถัดไป",
@@ -362,7 +361,6 @@
         "edit": "แก้ไข",
         "delete": "ลบ"
       },
-
       "table": {
         "typeNamePolicy": "ชื่อประเภท & นโยบาย",
         "paidStatus": "การจ่ายเงิน",
@@ -370,26 +368,21 @@
         "themeColor": "สีธีม",
         "actions": "การจัดการ"
       },
-
       "paid": {
         "paidLeave": "ลาแบบมีค่าจ้าง",
         "unpaidLeave": "ลาแบบไม่รับค่าจ้าง"
       },
-
       "daysLabel": "{{days}} วัน",
-
       "badges": {
         "carryForwardEnabled": "เปิดยกยอด (สูงสุด {{max}} วัน)",
         "carryForwardDisabled": "ปิดยกยอด"
       },
-
       "modal": {
         "addTitle": "เพิ่มประเภทการลา",
         "addSubtitle": "สร้างหมวดหมู่ประเภทการลาใหม่",
         "editTitle": "แก้ไขประเภทการลา",
         "editSubtitle": "แก้ไขรายละเอียดและนโยบายการลา"
       },
-
       "form": {
         "typeName": "ชื่อประเภทการลา",
         "defaultQuotaDaysPerYear": "โควต้ามาตรฐาน (วัน/ปี)",
@@ -399,14 +392,12 @@
         "themeColor": "สีธีมสำหรับปฏิทิน & กราฟ",
         "hexPlaceholder": "#HEXCODE"
       },
-
       "yearEndPolicyTitle": "นโยบายปลายปี ({{year}})",
       "yearEndPolicyIntro": "โปรดอ่านและทำความเข้าใจนโยบายต่อไปนี้:",
       "yearEndPolicyAccept": "ฉันเข้าใจและยินยอมให้ดำเนินการต่อ",
       "yearEndPolicyMustAccept": "คุณต้องยอมรับนโยบายก่อนจึงจะดำเนินการต่อได้",
       "confirmButtonText": "ยืนยัน",
       "cancelButtonText": "ยกเลิก",
-
       "yearEndPolicy": {
         "bullet1": "ระบบจะใช้จำนวนวันคงเหลือของปี {{year}} ในการคำนวณ",
         "bullet2": "การยกยอดจะมีผลเฉพาะประเภทที่เปิดการยกยอดเท่านั้น",
@@ -415,18 +406,14 @@
         "warningLabel": "คำเตือน:",
         "bullet5": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ กรุณาตรวจสอบให้แน่ใจว่าได้จัดการคำขอลาที่ค้างอยู่เรียบร้อยแล้ว"
       },
-
       "examples": {
         "leaveTypeName": "เช่น ลาป่วย"
       },
-
       "noLeaveTypesFound": "ไม่พบประเภทการลา",
-
       "delete": {
         "title": "ลบประเภทการลา",
         "text": "คุณต้องการลบประเภทการลานี้ใช่หรือไม่?"
       },
-
       "alert": {
         "fetchFailed": "ไม่สามารถดึงข้อมูลประเภทการลาได้",
         "saved": "บันทึกประเภทการลาสำเร็จ",
@@ -504,87 +491,87 @@
       "noLeaveDataFound": "ไม่พบข้อมูลการลา"
     },
     "hrEmployees": {
-        "buttons": {
-          "addNew": "เพิ่มพนักงาน",
-          "refresh": "รีเฟรช",
-          "refreshList": "รีเฟรชรายการ",
-          "edit": "แก้ไข"
-        },
-        "add": {
-          "title": "เพิ่มพนักงานใหม่",
-          "subtitle": "กรอกข้อมูลเพื่อสร้างบัญชีใหม่"
-        },
-        "title": "พนักงาน",
-        "subtitle": "จัดการพนักงานและโควต้าการลา",
-        "search": {
-          "placeholder": "ค้นหาพนักงาน..."
-        },
-        "filters": {
-          "allRoles": "ทุกบทบาท",
-          "hr": "ฝ่ายบุคคล (HR)",
-          "worker": "พนักงาน",
-          "allStatus": "ทุกสถานะ",
-          "activeOnly": "ใช้งานอยู่เท่านั้น",
-          "inactiveOnly": "ปิดใช้งานเท่านั้น"
-        },
-        "table": {
-          "id": "รหัส",
-          "name": "ชื่อ",
-          "emailRole": "อีเมล / บทบาท",
-          "actions": "การจัดการ"
-        },
-        "badge": {
-          "inactive": "ปิดใช้งาน"
-        },
-        "activate": "เปิดใช้งาน",
-        "deactivate": "ปิดใช้งาน",
-        "quota": "โควต้า",
-        "noEmployeesFound": "ไม่พบพนักงาน",
-        "form": {
-          "firstName": "ชื่อจริง",
-          "lastName": "นามสกุล",
-          "email": "อีเมล",
-          "role": "บทบาท",
-          "joiningDate": "วันที่เริ่มงาน",
-          "active": "เปิดใช้งาน",
-          "password": "รหัสผ่าน",
-          "passwordHint": "(เว้นว่างเพื่อคงรหัสเดิม)"
-        },
-        "edit": {
-          "title": "แก้ไขข้อมูลพนักงาน"
-        },
-        "quotaModal": {
-          "title": "โควต้าการลา",
-          "loadYear": "โหลด",
-          "syncStandard": "ซิงก์มาตรฐาน",
-          "leaveTypeUsed": "ประเภทการลา / ใช้ไป",
-          "thisYear": "ปีนี้",
-          "carried": "ยกมา",
-          "maxCarryDays": "ยกได้สูงสุด",
-          "carryAllowed": "อนุญาตให้ยก",
-          "usedLabel": "ใช้ไป",
-          "carryHintAllowed": "อนุญาต",
-          "carryHintBlocked": "ไม่อนุญาต",
-          "saveQuota": "บันทึกโควต้า"
-        },
-        "alert": {
-          "loadFailed": "โหลดรายชื่อพนักงานไม่สำเร็จ",
-          "saved": "บันทึกสำเร็จ",
-          "updated": "อัปเดตสำเร็จ",
-          "loadQuotaFailed": "โหลดโควต้าไม่สำเร็จ",
-          "quotaSaved": "บันทึกโควต้าเรียบร้อย",
-          "activateTitle": "ต้องการเปิดใช้งานพนักงานหรือไม่?",
-          "deactivateTitle": "ต้องการปิดใช้งานพนักงานหรือไม่?",
-          "activateText": "การดำเนินการนี้จะอนุญาตให้พนักงานเข้าสู่ระบบได้อีกครั้ง",
-          "deactivateText": "การดำเนินการนี้จะไม่อนุญาตให้พนักงานเข้าสู่ระบบ",
-          "syncTitle": "ซิงก์โควต้ามาตรฐานหรือไม่?",
-          "syncText": "การดำเนินการนี้จะซิงก์โควต้ามาตรฐานให้กับพนักงาน",
-          "synced": "ซิงก์เรียบร้อย",
-          "syncFailed": "ไม่สามารถซิงก์ได้",
-          "quotaSaveFailed": "ไม่สามารถอัปเดตโควต้าได้",
-          "activated": "พนักงานถูกตั้งค่าเป็น “เปิดใช้งาน” แล้ว",
-          "deactivated": "พนักงานถูกตั้งค่าเป็น “ปิดใช้งาน” แล้ว"
-        }
+      "buttons": {
+        "addNew": "เพิ่มพนักงาน",
+        "refresh": "รีเฟรช",
+        "refreshList": "รีเฟรชรายการ",
+        "edit": "แก้ไข"
+      },
+      "add": {
+        "title": "เพิ่มพนักงานใหม่",
+        "subtitle": "กรอกข้อมูลเพื่อสร้างบัญชีใหม่"
+      },
+      "title": "พนักงาน",
+      "subtitle": "จัดการพนักงานและโควต้าการลา",
+      "search": {
+        "placeholder": "ค้นหาพนักงาน..."
+      },
+      "filters": {
+        "allRoles": "ทุกบทบาท",
+        "hr": "ฝ่ายบุคคล (HR)",
+        "worker": "พนักงาน",
+        "allStatus": "ทุกสถานะ",
+        "activeOnly": "ใช้งานอยู่เท่านั้น",
+        "inactiveOnly": "ปิดใช้งานเท่านั้น"
+      },
+      "table": {
+        "id": "รหัส",
+        "name": "ชื่อ",
+        "emailRole": "อีเมล / บทบาท",
+        "actions": "การจัดการ"
+      },
+      "badge": {
+        "inactive": "ปิดใช้งาน"
+      },
+      "activate": "เปิดใช้งาน",
+      "deactivate": "ปิดใช้งาน",
+      "quota": "โควต้า",
+      "noEmployeesFound": "ไม่พบพนักงาน",
+      "form": {
+        "firstName": "ชื่อจริง",
+        "lastName": "นามสกุล",
+        "email": "อีเมล",
+        "role": "บทบาท",
+        "joiningDate": "วันที่เริ่มงาน",
+        "active": "เปิดใช้งาน",
+        "password": "รหัสผ่าน",
+        "passwordHint": "(เว้นว่างเพื่อคงรหัสเดิม)"
+      },
+      "edit": {
+        "title": "แก้ไขข้อมูลพนักงาน"
+      },
+      "quotaModal": {
+        "title": "โควต้าการลา",
+        "loadYear": "โหลด",
+        "syncStandard": "ซิงก์มาตรฐาน",
+        "leaveTypeUsed": "ประเภทการลา / ใช้ไป",
+        "thisYear": "ปีนี้",
+        "carried": "ยกมา",
+        "maxCarryDays": "ยกได้สูงสุด",
+        "carryAllowed": "อนุญาตให้ยก",
+        "usedLabel": "ใช้ไป",
+        "carryHintAllowed": "อนุญาต",
+        "carryHintBlocked": "ไม่อนุญาต",
+        "saveQuota": "บันทึกโควต้า"
+      },
+      "alert": {
+        "loadFailed": "โหลดรายชื่อพนักงานไม่สำเร็จ",
+        "saved": "บันทึกสำเร็จ",
+        "updated": "อัปเดตสำเร็จ",
+        "loadQuotaFailed": "โหลดโควต้าไม่สำเร็จ",
+        "quotaSaved": "บันทึกโควต้าเรียบร้อย",
+        "activateTitle": "ต้องการเปิดใช้งานพนักงานหรือไม่?",
+        "deactivateTitle": "ต้องการปิดใช้งานพนักงานหรือไม่?",
+        "activateText": "การดำเนินการนี้จะอนุญาตให้พนักงานเข้าสู่ระบบได้อีกครั้ง",
+        "deactivateText": "การดำเนินการนี้จะไม่อนุญาตให้พนักงานเข้าสู่ระบบ",
+        "syncTitle": "ซิงก์โควต้ามาตรฐานหรือไม่?",
+        "syncText": "การดำเนินการนี้จะซิงก์โควต้ามาตรฐานให้กับพนักงาน",
+        "synced": "ซิงก์เรียบร้อย",
+        "syncFailed": "ไม่สามารถซิงก์ได้",
+        "quotaSaveFailed": "ไม่สามารถอัปเดตโควต้าได้",
+        "activated": "พนักงานถูกตั้งค่าเป็น “เปิดใช้งาน” แล้ว",
+        "deactivated": "พนักงานถูกตั้งค่าเป็น “ปิดใช้งาน” แล้ว"
+      }
     },
     "workerAttendancePage": {
       "Date": "วันที่",
@@ -601,13 +588,13 @@
       "Search": "ค้นหา",
       "Check In": "เช็คอิน",
       "noRecordsInRange": "ไม่พบข้อมูลในช่วงวันที่เลือก",
-      "Late this month":"มาสายเดือนนี้",
+      "Late this month": "มาสายเดือนนี้",
       "status": {
         "late": "มาสาย",
         "onTime": "ตรงเวลา"
       }
     },
-     "workerCalendar": {
+    "workerCalendar": {
       "title": "ปฏิทินของฉัน",
       "subtitle": "การเข้างาน + การลา (มุมมองรายเดือน)",
       "today": "วันนี้",
@@ -672,13 +659,10 @@
       "title": "คำขอแก้ไขโปรไฟล์",
       "alert": {
         "loadFailed": "ไม่สามารถโหลดคำขอแก้ไขโปรไฟล์ได้",
-
         "confirmApproveTitle": "อนุมัติการแก้ไขโปรไฟล์?",
         "confirmApproveText": "คุณต้องการอนุมัติคำขอแก้ไขโปรไฟล์นี้หรือไม่?",
-
         "confirmRejectTitle": "ปฏิเสธการแก้ไขโปรไฟล์?",
         "confirmRejectText": "คุณต้องการปฏิเสธคำขอแก้ไขโปรไฟล์นี้หรือไม่?",
-
         "approved": "อนุมัติคำขอแก้ไขโปรไฟล์เรียบร้อยแล้ว",
         "rejected": "ปฏิเสธคำขอแก้ไขโปรไฟล์เรียบร้อยแล้ว"
       }
@@ -774,7 +758,9 @@
       "markAllRead": "ทำเครื่องหมายว่าอ่านแล้วทั้งหมด",
       "clearAll": "ล้างทั้งหมด",
       "noNotificationsFound": "ไม่พบการแจ้งเตือน",
-      "badge": { "new": "ใหม่" },
+      "badge": {
+        "new": "ใหม่"
+      },
       "table": {
         "type": "ประเภท",
         "message": "ข้อความ",
@@ -783,7 +769,9 @@
       },
       "view": "ดู",
       "open": "เปิด",
-      "modal": { "title": "การแจ้งเตือน" },
+      "modal": {
+        "title": "การแจ้งเตือน"
+      },
       "type": {
         "lateWarning": "แจ้งเตือนมาสาย",
         "leave": "การลา",
@@ -911,7 +899,6 @@
       "loading": "กำลังโหลด...",
       "noLogs": "ไม่พบข้อมูล",
       "footerHint": "คลิกที่แถวเพื่อดูรายละเอียดการเปลี่ยนแปลง",
-
       "modal": {
         "close": "ปิด",
         "generalInfo": "ข้อมูลทั่วไป",
@@ -923,7 +910,6 @@
         "ip": "IP Address",
         "target": "รายการที่เกี่ยวข้อง"
       },
-
       "categories": {
         "Leave": "การลา",
         "Attendance": "การลงเวลา",
@@ -936,7 +922,6 @@
         "Report": "รายงาน",
         "Other": "อื่น ๆ"
       },
-
       "actions": {
         "LEAVE_REQUEST_CREATE": "ยื่นขอลา",
         "LEAVE_REQUEST_CANCEL": "ยกเลิกการลา",
@@ -1056,7 +1041,40 @@
       "checkIn": "เช็คอิน",
       "checkOut": "เช็คเอาท์",
       "closeWindow": "ปิดหน้าต่าง"
-      
     }
+  },
+  "auditFields": {
+    "startTime": "เวลาเข้างาน",
+    "endTime": "เวลาเลิกงาน",
+    "graceMinutes": "เวลาอนุโลม (นาที)",
+    "workingDays": "วันทำงาน",
+    "specialHolidays": "วันหยุดพิเศษ",
+    "policyId": "รหัสนโยบาย",
+    "leaveGapDays": "ระยะห่างการลา (วัน)",
+    "updatedAt": "แก้ไขเมื่อ",
+    "createdAt": "สร้างเมื่อ",
+    "deletedAt": "ลบเมื่อ",
+    "id": "รหัส",
+    "employeeId": "รหัสพนักงาน",
+    "type": "ประเภท",
+    "status": "สถานะ",
+    "reason": "เหตุผล",
+    "amount": "จำนวน",
+    "days": "วัน",
+    "firstName": "ชื่อจริง",
+    "lastName": "นามสกุล",
+    "email": "อีเมล",
+    "role": "บทบาท",
+    "isActive": "เปิดใช้งาน",
+    "password": "รหัสผ่าน",
+    "address": "ที่อยู่",
+    "phone": "เบอร์โทรศัพท์",
+    "gender": "เพศ",
+    "maxCarryOverDays": "วันยกยอดสูงสุด",
+    "defaultQuotaDaysPerYear": "โควต้ามาตรฐาน (วัน/ปี)",
+    "enableCarryForward": "เปิดการยกยอด",
+    "typeName": "ชื่อประเภท",
+    "colorCode": "รหัสสี",
+    "isPaid": "จ่ายเงิน"
   }
 }
