--- a/frontend/src/locales/jp/translation.json
+++ b/frontend/src/locales/jp/translation.json
@@ -153,7 +153,8 @@
       "employees": "従業員",
       "leaveQuotaSettings": "休暇クォータ設定",
       "attendanceSettings": "勤怠設定",
-      "rolesManagement": "役割管理"
+      "rolesManagement": "役割管理",
+      "adminAuditLog": "監査ログ"
     },
     "toggleSidebar": "サイドバーを切替",
     "title": "サイドバー"
@@ -187,6 +188,9 @@
     "loginFailedDefault": "サーバーに接続できないか、メール／パスワードが正しくありません。"
   },
   "pages": {
+    "adminAuditLog": {
+      "subtitle": "すべての人事活動とシステムログを表示"
+    },
     "roles": {
       "title": "役割管理",
       "subtitle": "ユーザーの役割と権限を管理します。",
